syntax = "proto3";

service JunoService {
    rpc HelloStream (stream HelloRequest) returns (stream HelloResponse);
}

message HelloRequest {
    oneof type {
        bool start = 1;
        string data = 2;
        bool end = 3;
    }   
}

message HelloResponse {
    bool isSuccess = 1;
}